chore: eslint config

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
-// src/styles.scss
+// // src/styles.scss
 
-// 1. Variables & Config
-@use 'styles/variables';
-@use 'styles/themes';
+// // 1. Variables & Config
+// @use 'styles/variables';
+// @use 'styles/themes';
 
-// 2. Resets & Normalization
-@use 'styles/reset';
+// // 2. Resets & Normalization
+// @use 'styles/reset';
 
-// 3. Global Utilities
-@use 'styles/utilities';
+// // 3. Global Utilities
+// @use 'styles/utilities';
