chore: install and config transloco, add first blog

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -241,8 +241,10 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title() }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <ng-container *transloco="let t">
+        <h1>{{ t('home.welcome') }}</h1>
+        <p>{{ t('home.description') }}</p>
+      </ng-container>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
