--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,5 +3,19 @@
     <h1>{{ t('home.welcome') }}</h1>
     <p>{{ t('home.description') }}</p>
   </ng-container>
+  <eb-icon name="heroAcademicCap" size="xl" ariaLabel="academic cap" />
+  <eb-divider spacing="lg" />
+  <eb-loading-spinner ariaLabel="Loading application" />
+  <div style="position: relative; display: inline-block">
+    <span>Cart</span>
+    <eb-badge [content]="44" variant="error" position="top-right" ariaLabel="44 items in cart" />
+  </div>
+  <eb-skeleton
+    variant="rectangular"
+    width="100%"
+    height="300px"
+    [spacing]="16"
+    ariaLabel="Loading card"
+  />
 </main>
 <router-outlet />
